<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Alabama Damage Tracker</string>
    <string name="home_capture">Camera</string>
    <string name="home_reports">View Images</string>
    <string name="home_Continue">Continue Current Location</string>
    <string name="color_crimson">#DC143C</string>
    <string name="add_gps">Add GPS</string>
    <string name="info_title">Add Information</string>
    <string name="review_GPS">GPS</string>
    <string name="info_address">Address:</string>
    <string name="info_degree">Degree of Damage</string>
    <string name="info_indicator">Damage Indicator:</string>
    <string name="info_notes">Notes:</string>
    <string name="view_all_photos">View All Photos</string>
    <string name="location_from_gps">Location From GPS</string>
    <string name="street_address">Street Address</string>
	<string name="Review_Damage_Title">Damage Summary</string>
	<string name="Review_GPS">No GPS location Available</string>
	<string name="Review_Address">No Street Address Provided</string>
	<string name="review_EF">EF Rating</string>
	<string name="review_Degree_Of_Damage">No Degree of Damage Listed</string>
	<string name="review_text_notes">No Text Notes</string>
	<string name="Listen_to_Audio">Audio Notes</string>
	<string name="Return_Home">Home</string>
	<string name="review_edit_damage">Edit Damage</string>
	<string name="reviewUser">Users ID</string>
	<string name="server_address">Server Address</string>
	<string name="email_address">Email Address</string>
	<string name="password">Password</string>
	<string name="info_latitude">Latitude:</string>
	<string name="info_longitude">Longitude:</string>
	<string name="home_info">Web Portal</string>
	<string name="home_upload">Upload</string>
	<string name="home_title">Damage Tracker</string>
	<string name="info_save">Save</string>
	<string name="info_delete">Delete</string>
</resources>
