<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/server_address" />
    <EditText android:id="@+id/server_address" android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="textUri" />
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/email_address" />
    <EditText android:id="@+id/user_email" android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="textEmailAddress" />
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/password" />
    <EditText android:id="@+id/user_password" android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="textPassword" />
    

</LinearLayout>