<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent" android:weightSum="1"
  >

    <LinearLayout
	    android:focusable="true" android:focusableInTouchMode="true"
	    android:layout_width="0px" android:layout_height="0px"
	 />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_title"
        android:textColor="#DC143C"
        android:textAppearance="?android:attr/textAppearanceLarge"
     />
    <ScrollView android:layout_height="wrap_content" android:layout_width="match_parent">
        <LinearLayout
  			android:orientation="vertical"
  			android:layout_width="match_parent"
  			android:layout_height="wrap_content"
  			android:weightSum="1"
 		>

    		<ImageView
    		    android:id="@+id/info_image"
    		    android:layout_width="match_parent"
    		    android:layout_height="186dp"
    		    android:src="@drawable/icon"
    		    android:contentDescription="Damage Image"
   		    />
    		
    		<TextView
    		    android:layout_width="wrap_content"
    		    android:layout_height="wrap_content"
    		    android:id="@+id/info_time"
    		    android:textAppearance="?android:attr/textAppearanceMedium"
    		/>
    		
    		<TextView
    		    android:layout_width="wrap_content"
    		    android:layout_height="wrap_content"
    		    android:text="@string/info_latitude"
    		    android:id="@+id/info_latitude"
    		    android:textAppearance="?android:attr/textAppearanceMedium"
    		/>
    		<TextView
    		    android:layout_width="wrap_content"
    		    android:layout_height="wrap_content"
    		    android:text="@string/info_longitude"
    		    android:id="@+id/info_longitude"
    		    android:textAppearance="?android:attr/textAppearanceMedium"
    		/>
    		
    		<TextView
    		    android:layout_width="wrap_content"
    		    android:layout_height="wrap_content"
    		    android:text="@string/info_address"
    		    android:textAppearance="?android:attr/textAppearanceMedium"
   		    />
    		<EditText
    		    android:id="@+id/info_address"
    		    android:layout_width="match_parent"
    		    android:layout_height="wrap_content"
    		    android:inputType="textMultiLine"
   		    />

    		<TextView
    		    android:layout_width="wrap_content"
    		    android:layout_height="wrap_content"
    		    android:text="@string/info_indicator"
    		    android:textAppearance="?android:attr/textAppearanceMedium"
   		    />
    		<Spinner
    		    android:id="@+id/info_indicator"
    		    android:layout_width="154dp"
    		    android:layout_height="wrap_content"
   		    />

    		<TextView
    		    android:layout_width="wrap_content"
    		    android:layout_height="wrap_content"
    		    android:text="@string/info_degree"
    		    android:textAppearance="?android:attr/textAppearanceMedium" 
   		    />
    		<Spinner
    		    android:id="@+id/info_degree"
    		    android:layout_width="154dp"
    		    android:layout_height="wrap_content"
   		    />

    		<TextView
    		    android:layout_width="wrap_content"
    		    android:layout_height="wrap_content"
    		    android:text="@string/info_notes"
    		    android:textAppearance="?android:attr/textAppearanceMedium"
   		    />
       		<EditText
       		    android:id="@+id/info_notes"
       		    android:layout_width="match_parent"
       		    android:layout_height="wrap_content"
       		    android:inputType="textMultiLine"
       		/>
        		
    		<Button
    		    android:layout_width="match_parent"
    		    android:text="Delete Damage Location"
    		    android:layout_height="wrap_content"
    		    android:id="@+id/info_delete_btn"
    		    android:onClick="onDeleteBtn"
   		    />
    		
   		 	<Button
		 		android:text="Save Damage Location"
		 		android:layout_height="wrap_content"
		 		android:id="@+id/info_save_btn"
		 		android:layout_width="match_parent"
    		    android:onClick="onSaveBtn"
	 		/>
   		 	
		</LinearLayout>
    </ScrollView>
    </LinearLayout>
